--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -3,19 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.andremion.theatre.event.detail.EventActivity"
-    tools:showIn="@layout/activity_detail"
+    tools:showIn="@layout/fragment_detail_user"
     tools:targetApi="lollipop">
 
     <data>
-
         <variable
-            name="eventDetailViewModel"
-            type="com.andremion.theatre.event.detail.EventDetailViewModel" />
-
-        <variable
-            name="eventRatingViewModel"
-            type="com.andremion.theatre.event.detail.rating.EventRatingViewModel" />
-
+            name="user"
+            type="com.rocklobstre.coolRecyclerview.domain.model.User" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -36,7 +30,7 @@
             android:layout_marginRight="@dimen/text_margin"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginTop="32dp"
-            android:transitionName="@{@string/event_card_transition + eventDetailViewModel.event.id}"
+            android:transitionName="@{@string/event_card_transition + user.id}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -52,11 +46,11 @@
             android:cropToPadding="true"
             android:elevation="@dimen/cardview_default_elevation"
             android:scaleType="centerCrop"
-            android:transitionName="@{@string/event_image_transition + eventDetailViewModel.event.id}"
+            android:transitionName="@{@string/event_image_transition + user.id}"
             app:layout_constraintDimensionRatio="W,4:3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadUrl="@{eventDetailViewModel.event.thumbnail}"
+            app:loadUrl="@{user.avatar}"
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <android.support.v7.widget.CardView
@@ -68,8 +62,7 @@
             app:cardBackgroundColor="@color/colorAccent"
             app:cardElevation="@dimen/design_appbar_elevation"
             app:layout_constraintRight_toRightOf="@id/card_main"
-            app:layout_constraintTop_toTopOf="parent"
-            app:visible="@{!eventDetailViewModel.event.price.isEmpty()}">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/text_price"
@@ -77,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
                 android:maxLines="1"
-                android:text="@{eventDetailViewModel.event.price}"
+                android:text="@{user.firstName}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="?android:textColorPrimaryInverse"
                 tools:text="@tools:sample/us_zipcodes" />
@@ -91,9 +84,9 @@
             android:layout_margin="@dimen/text_margin"
             android:elevation="@dimen/cardview_default_elevation"
             android:maxLines="2"
-            android:text="@{eventDetailViewModel.event.name}"
+            android:text="@{user.firstName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:transitionName="@{@string/event_name_transition + eventDetailViewModel.event.id}"
+            android:transitionName="@{@string/event_name_transition + user.id}"
             app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
             app:layout_constraintRight_toRightOf="@id/card_main"
             app:layout_constraintTop_toBottomOf="@id/card_price"
@@ -106,48 +99,12 @@
             android:layout_margin="@dimen/text_margin"
             android:elevation="@dimen/cardview_default_elevation"
             android:maxLines="1"
-            android:text="@{eventDetailViewModel.venue.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
             app:layout_constraintRight_toRightOf="@id/card_main"
             app:layout_constraintTop_toBottomOf="@id/text_name"
             tools:text="@tools:sample/cities" />
 
-        <RatingBar
-            android:id="@+id/rating_bar"
-            style="@style/Base.Widget.AppCompat.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:elevation="@dimen/cardview_default_elevation"
-            android:rating="@{eventRatingViewModel.result.rating}"
-            app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
-            app:layout_constraintTop_toBottomOf="@id/text_venue"
-            tools:rating="3.5" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginRight="@dimen/text_margin"
-            android:elevation="@dimen/cardview_default_elevation"
-            android:transitionGroup="true"
-            app:layout_constraintBottom_toBottomOf="@id/card_main"
-            app:layout_constraintLeft_toLeftOf="@id/card_main"
-            app:layout_constraintRight_toRightOf="@id/card_main"
-            app:layout_constraintTop_toBottomOf="@id/rating_bar"
-            app:pageMargin="@{@dimen/activity_horizontal_margin}}"
-            app:sectionAdapter="@{eventDetailViewModel.event.id}">
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:setupWithViewPager="@{viewPager}" />
-
-        </android.support.v4.view.ViewPager>
 
     </android.support.constraint.ConstraintLayout>
 
