--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -85,6 +85,7 @@
             android:elevation="@dimen/cardview_default_elevation"
             android:maxLines="2"
             android:text="@{user.firstName}"
+            android:textColor="@color/colorPrimary"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:transitionName="@{@string/event_name_transition + user.id}"
             app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
@@ -98,6 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:elevation="@dimen/cardview_default_elevation"
+            android:textColor="@color/colorPrimary"
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintLeft_toRightOf="@id/image_thumbnail"
