--- a/app/src/main/res/layout/list_users_item.xml
+++ b/app/src/main/res/layout/list_users_item.xml
@@ -74,6 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:ellipsize="end"
+            android:textColor="@color/colorPrimary"
             android:maxLines="1"
             android:text='@{user.firstName + " " + user.lastName}'
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
