Performing classes need for android.arch.Paging

--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -84,7 +84,7 @@
             android:layout_margin="@dimen/text_margin"
             android:elevation="@dimen/cardview_default_elevation"
             android:maxLines="2"
-            android:text="@{user.firstName}"
+            android:text='@{user.firstName + " " + user.lastName}'
             android:textColor="@color/colorPrimary"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:transitionName="@{@string/event_name_transition + user.id}"
