--- a/app/src/main/res/layout/fragment_list_users.xml
+++ b/app/src/main/res/layout/fragment_list_users.xml
@@ -34,8 +34,21 @@
                 android:scrollbars="vertical"
                 app:load_users="@{users}"
                 app:callbacks="@{callbacks}"
+                tools:listitem="@layout/list_users_item"
                 />
         </android.support.v4.widget.SwipeRefreshLayout>
+
+        <include
+            android:id="@+id/main_emptyView"
+            layout="@layout/empty_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
     </android.support.design.widget.CoordinatorLayout>
 
