--- a/app/src/main/res/layout/list_users_item.xml
+++ b/app/src/main/res/layout/list_users_item.xml
@@ -30,7 +30,21 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/image_thumbnail"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" >
+            <TextView
+                android:id="@+id/text_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/text_margin"
+                android:ellipsize="end"
+                android:textColor="@color/colorPrimary"
+                android:paddingLeft="30dp"
+                android:maxLines="1"
+                android:text='@{user.firstName + " " + user.lastName}'
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:transitionName="@{@string/event_name_transition + user.id}"
+                tools:text="@tools:sample/full_names" />
+        </android.support.v7.widget.CardView>
 
         <ImageView
             android:id="@+id/image_thumbnail"
@@ -68,21 +82,7 @@
             app:layout_constraintTop_toBottomOf="@id/image_thumbnail"
             tools:text="@tools:sample/us_zipcodes" />
 
-        <TextView
-            android:id="@+id/text_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:ellipsize="end"
-            android:textColor="@color/colorPrimary"
-            android:maxLines="1"
-            android:text='@{user.firstName + " " + user.lastName}'
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:transitionName="@{@string/event_name_transition + user.id}"
-            app:layout_constraintLeft_toRightOf="@+id/image_thumbnail"
-            app:layout_constraintRight_toRightOf="@id/cardview"
-            app:layout_constraintTop_toTopOf="@id/cardview"
-            tools:text="@tools:sample/full_names" />
+
 
 
         <ImageButton
